<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/one" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home_menu" />
    </group>

    <group android:id="@+id/two" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_category"
            android:icon="@drawable/baseline_category_24"
            android:title="@string/menu_food" />
    </group>

    <group android:id="@+id/eight" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_clear_24"
            android:title="@string/logout_menu" />
    </group>


</menu>
