<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.project.pantry.fragments.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/general_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_32sdp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    android:src="@drawable/restaurant"
                    android:contentDescription="@string/app_name"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|bottom"
                    android:padding="@dimen/_16sdp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/restaurant_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/restuarant_home"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_20sdp"/>

                    <TextView
                        android:id="@+id/restaurant_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/restuarant_home_th"
                        android:textColor="@color/colorExtra"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:textSize="@dimen/_16sdp"/>

                </LinearLayout>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_16sdp"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/restaurant_opening_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/topic"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_12sdp"/>

            </LinearLayout>


            <TextView
                android:id="@+id/restaurant_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_app"
                android:textColor="@color/colorBlack"
                android:lineSpacingMultiplier="1.3"
                android:padding="@dimen/_16sdp"
                android:textSize="@dimen/_12sdp"/>


            <TextView
                android:id="@+id/our_meals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/our_meals"
                android:textColor="@color/colorBlack"
                android:lineSpacingMultiplier="1.3"
                android:textStyle="bold"
                android:paddingRight="@dimen/_16sdp"
                android:paddingLeft="@dimen/_16sdp"
                android:textSize="@dimen/_16sdp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:background="@color/colorPrimaryDark"/>

            <LinearLayout
                android:id="@+id/meal_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_16sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:src="@drawable/food1"
                    android:layout_weight="1"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:src="@drawable/food2"
                    android:layout_weight="1"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/food3"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/meal_wrapper_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_16sdp"
                android:paddingRight="@dimen/_16sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:src="@drawable/food4"
                    android:layout_weight="1"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:src="@drawable/food5"
                    android:layout_weight="1"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/food6"
                    android:layout_weight="1"/>

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_information"
                android:textColor="@color/colorBlack"
                android:lineSpacingMultiplier="1.3"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_32sdp"
                android:paddingRight="@dimen/_16sdp"
                android:paddingLeft="@dimen/_16sdp"
                android:textSize="@dimen/_16sdp"
                android:id="@+id/textView" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:background="@color/colorPrimaryDark"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_16sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/create1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:layout_gravity="center"
                    android:text="@string/name1"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_13sdp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_16sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/create2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:layout_gravity="center"
                    android:text="@string/name2"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_13sdp"/>
            </LinearLayout>



        </LinearLayout>

    </ScrollView>

</LinearLayout>
