<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_food"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.project.pantry.FoodDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/box_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/food_item_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/dish" />

            <LinearLayout
                android:id="@+id/inner_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_16sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/food_item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food_name"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:textSize="@dimen/_16sdp"/>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Food Category"
                    android:textColor="@color/black"
                    android:lineSpacingMultiplier="1.3"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:textSize="@dimen/_13sdp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:background="#FF9900"/>


                <TextView
                    android:id="@+id/food_material"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test"
                    android:textColor="@color/black"
                    android:lineSpacingMultiplier="1.3"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:textSize="@dimen/_12sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_detail"
                    android:textColor="@color/black"
                    android:lineSpacingMultiplier="1.3"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:textSize="@dimen/_13sdp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:background="#FF9900"/>


                <TextView
                    android:id="@+id/food_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test"
                    android:textColor="@color/black"
                    android:lineSpacingMultiplier="1.3"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:textSize="@dimen/_12sdp"/>


            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>
